--- a/ui/.eslintrc.json
+++ b/ui/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "extends": ["eslint:recommended", "next/core-web-vitals", "prettier"],
   "rules": {
-    "@next/next/no-img-element": "off"
+    "@next/next/no-img-element": "off",
+    "no-unused-vars": "off"
   },
   "plugins": ["jest"],
   "globals": {
